--- a/test/support/js/full-app/views/foo/defaultView.html.ejs
+++ b/test/support/js/full-app/views/foo/defaultView.html.ejs
@@ -1,3 +1,3 @@
 <% view.layout = 'default' %>
-<% ctx.partials.head = 'Header partial' %>
-Default for <%= controller %> and <%= action %>
+<% ctx.partials.title = 'My Title' %>
+<p>This is the default for <%= controller %> and <%= action %></p>
