Fix examples that did not consider that ctx.contentFor() returns a promise

--- a/test/support/js/full-app/views/foo/hello.html.tmpl
+++ b/test/support/js/full-app/views/foo/hello.html.tmpl
@@ -1,5 +1,5 @@
 <{headerBlock}>
   <style>body { color: #000 }</style>
 <{/headerBlock}>
-% ctx.contentFor('header', await headerBlock());
+% await ctx.contentFor('header', await headerBlock());
 Hey <%= name %>
