--- a/test/support/js/full-app/views/foo/hello.html.tmpl
+++ b/test/support/js/full-app/views/foo/hello.html.tmpl
@@ -1,5 +1,5 @@
 <{headerBlock}>
   <style>body { color: #000 }</style>
 <{/headerBlock}>
-% await ctx.contentFor('header', headerBlock());
+% await ctx.contentFor('header', headerBlock);
 Hey <%= name %>
